# ewarehouse

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json
backend/: Makefile  pyproject.toml
backend/core/: urls.py  wsgi.py
backend/core/settings/: base.py  dev.py  prod.py
backend/inventory/: admin.py  models.py  serializers.py
backend/inventory/urls/: order_urls.py
backend/inventory/views/: order_views.py  product_views.py
backend/tenant/: admin.py  apps.py  middleware.py  models.py  serializers.py  utilities.py
backend/tenant/migrations/: 0001_initial.py  0002_alter_product_contents_alter_product_image_and_more.py  0002_member.py  0003_remove_member_email_remove_member_id_and_more.py  0003_rename_value_productorderinginformations_description_and_more.py  0004_alter_product_id.py  0004_product_delete_member.py  0005_alter_product_tenant_alter_tenant_subdomain.py
backend/tenant/urls/: product_urls.py
backend/tenant/views/: product_views.py
backend/users/: serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: Makefile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  hooks.ts  index.tsx  store.ts  types.ts
frontend/src/components/: Product.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/features/auth/: authActions.ts  authSlice.ts
frontend/src/pages/: Cart.tsx  Home.tsx  Login.tsx  SingleProduct.tsx  Store.tsx
frontend/src/screens/: HomeScreen.tsx
frontend/src/utils/: Api.ts  ApiService.ts
(+3 files in other folders)
